--- a/.eslintrc
+++ b/.eslintrc
@@ -7,15 +7,15 @@
     "es6": true
   },
   "rules": {
-    "quotes": ["warn", "double"],
-    "semi": ["warn", "never"],
+    "quotes": [2, "double"],
+    "semi": [2, "never"],
     "import/order": [0],
     "dot-notation": [0],
     "linebreak-style": [0],
     "comma-dangle": [0],
     "lines-between-class-members": [0],
     "no-else-return": [0],
-    "no-multiple-empty-lines": ["warn", { "max": 1, "maxEOF": 1, "maxBOF": 0 }],
+    "no-multiple-empty-lines": [2, { "max": 1, "maxEOF": 1, "maxBOF": 0 }],
     "no-underscore-dangle": [0],
     "no-trailing-spaces": [0],
     "object-curly-newline": [0],
@@ -26,7 +26,8 @@
     "no-return-assign": [0],
     "quote-props": [0],
     "import/prefer-default-export": [0],
-    "array-bracket-spacing": ["warn", "always"],
+    "array-bracket-spacing": [2, "always"],
+    "operator-linebreak": [2, "after"],
     "react/jsx-filename-extension": [0],
     "react/no-children-prop": [0],
     "react/jsx-tag-spacing": [0],
