--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,7 @@
     "padded-blocks": [0],
     "react/jsx-filename-extension": [0],
     "react/no-children-prop": [0],
+    "react/jsx-indent": [0],
     "react/jsx-tag-spacing": [0],
     "react/jsx-wrap-multilines": [0],
     "react/jsx-closing-tag-location": [0],
