--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,7 @@
     "no-multiple-empty-lines": [2, { "max": 1, "maxEOF": 1, "maxBOF": 0 }],
     "no-underscore-dangle": [0],
     "no-trailing-spaces": [0],
-    "object-curly-newline": [0],
+    "object-curly-newline": [0],  
     "arrow-parens": [0],
     "no-param-reassign": [0],
     "no-console": [0],
@@ -26,9 +26,11 @@
     "no-return-assign": [0],
     "quote-props": [0],
     "import/prefer-default-export": [0],
-    "array-bracket-spacing": [2, "always"],
     "operator-linebreak": [2, "after"],
     "padded-blocks": [0],
+    "arrow-body-style": [0],
+    "array-bracket-spacing": [0],
+    "comma-spacing": [0],
     "react/jsx-filename-extension": [0],
     "react/no-children-prop": [0],
     "react/jsx-indent": [0],
