--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-apollo": "^3.0.0",
+    "react-datepicker": "^2.8.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
