--- a/package.json
+++ b/package.json
@@ -75,6 +75,8 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.0.0",
+    "@material-ui/core": "^4.3.2",
+    "@material-ui/icons": "^4.2.1",
     "apollo-boost": "^0.4.3",
     "apollo-server": "^2.8.1",
     "apollo-server-express": "^2.8.1",
