--- a/.eslintrc
+++ b/.eslintrc
@@ -39,6 +39,7 @@
     "react/jsx-closing-tag-location": [0],
     "jsx-a11y/click-events-have-key-events": [0],
     "jsx-a11y/label-has-associated-control": [0],
+    "jsx-a11y/control-has-associated-label": [0],
     "jsx-a11y/label-has-for": [0]
   }
 }
