--- a/package.json
+++ b/package.json
@@ -52,21 +52,22 @@
     "concurrently": "^4.1.2",
     "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.2.0",
-    "eslint": "^6.2.1",
+    "eslint": "^6.3.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-loader": "^2.2.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.0.1",
     "file-loader": "^4.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
-    "nodemon": "^1.19.1",
+    "nodemon": "^1.19.2",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "sass-loader": "^7.3.1",
+    "sass-loader": "^8.0.0",
     "webpack": "^4.39.2",
     "webpack-bundle-analyzer": "^3.4.1",
     "webpack-cli": "^3.3.7",
@@ -75,29 +76,29 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.0.1",
-    "@material-ui/core": "^4.3.2",
+    "@material-ui/core": "^4.4.0",
     "@material-ui/icons": "^4.2.1",
     "apollo-boost": "^0.4.4",
-    "apollo-server": "^2.8.2",
-    "apollo-server-express": "^2.8.2",
+    "apollo-server": "^2.9.3",
+    "apollo-server-express": "^2.9.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "formidable": "^1.2.1",
-    "graphql": "^14.4.2",
+    "graphql": "^14.5.4",
     "graphql-tag": "^2.10.1",
-    "helmet": "^3.20.0",
+    "helmet": "^3.21.0",
     "http-errors": "^1.7.3",
     "lodash": "^4.17.15",
     "mongodb": "^3.3.0",
-    "mongoose": "^5.6.10",
+    "mongoose": "^5.6.12",
     "morgan": "^1.9.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-apollo": "^3.0.1",
-    "react-datepicker": "^2.8.0",
+    "react-datepicker": "^2.9.4",
     "react-dom": "^16.9.0",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
