--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
   },
   "homepage": "https://github.com/olyop/boilerplate#readme",
   "devDependencies": {
-    "@babel/core": "^7.5.5",
+    "@babel/core": "^7.6.0",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.5.5",
+    "@babel/polyfill": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.5",
@@ -70,14 +70,14 @@
     "sass-loader": "^8.0.0",
     "webpack": "^4.39.2",
     "webpack-bundle-analyzer": "^3.4.1",
-    "webpack-cli": "^3.3.7",
+    "webpack-cli": "^3.3.8",
     "webpack-dev-server": "^3.8.0",
     "write-file-webpack-plugin": "^4.5.1"
   },
   "dependencies": {
-    "@apollo/react-hooks": "^3.0.1",
-    "@material-ui/core": "^4.4.0",
-    "@material-ui/icons": "^4.2.1",
+    "@apollo/react-hooks": "^3.1.0",
+    "@material-ui/core": "^4.4.2",
+    "@material-ui/icons": "^4.4.1",
     "apollo-boost": "^0.4.4",
     "apollo-server": "^2.9.3",
     "apollo-server-express": "^2.9.3",
@@ -85,6 +85,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "downshift": "^3.3.1",
     "express": "^4.17.1",
     "formidable": "^1.2.1",
     "graphql": "^14.5.4",
@@ -93,12 +94,12 @@
     "http-errors": "^1.7.3",
     "lodash": "^4.17.15",
     "mongodb": "^3.3.0",
-    "mongoose": "^5.6.12",
+    "mongoose": "^5.7.0",
     "morgan": "^1.9.1",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
-    "react-apollo": "^3.0.1",
-    "react-datepicker": "^2.9.4",
+    "react-apollo": "^3.1.0",
+    "react-datepicker": "^2.9.6",
     "react-dom": "^16.9.0",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
