--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,7 @@
     "arrow-body-style": [0],
     "comma-spacing": [0],
     "array-bracket-spacing": [0],
+    "no-nested-ternary": [0],
     "react/jsx-filename-extension": [0],
     "react/no-children-prop": [0],
     "react/jsx-indent": [0],
