--- a/.eslintrc
+++ b/.eslintrc
@@ -38,6 +38,7 @@
     "react/jsx-tag-spacing": [0],
     "react/jsx-wrap-multilines": [0],
     "react/jsx-closing-tag-location": [0],
+    "react/jsx-curly-brace-presence": [0],
     "jsx-a11y/click-events-have-key-events": [0],
     "jsx-a11y/label-has-associated-control": [0],
     "jsx-a11y/control-has-associated-label": [0],
