--- a/.eslintrc
+++ b/.eslintrc
@@ -35,6 +35,7 @@
     "react/jsx-filename-extension": [0],
     "react/no-children-prop": [0],
     "react/jsx-indent": [0],
+    "react/jsx-fragments": [2, "element"],
     "react/jsx-tag-spacing": [0],
     "react/jsx-wrap-multilines": [0],
     "react/jsx-closing-tag-location": [0],
