--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
       "exports": "always-multiline",
       "functions": "never"
     }],
+    "max-len": ["error", { "code": 105 }],
     "lines-between-class-members": [0],
     "no-else-return": [0],
     "no-multiple-empty-lines": [2, { "max": 1, "maxEOF": 1, "maxBOF": 0 }],
