--- a/.eslintrc
+++ b/.eslintrc
@@ -39,6 +39,7 @@
     "comma-spacing": [0],
     "array-bracket-spacing": [0],
     "no-nested-ternary": [0],
+    "array-callback-return": [0],
     "react/jsx-filename-extension": [0],
     "react/no-children-prop": [0],
     "react/jsx-indent": [0],
