--- a/package.json
+++ b/package.json
@@ -38,34 +38,34 @@
   },
   "homepage": "https://github.com/olyop/boilerplate#readme",
   "devDependencies": {
-    "@babel/core": "^7.7.4",
+    "@babel/core": "^7.7.5",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/polyfill": "^7.7.0",
-    "@babel/preset-env": "^7.7.4",
+    "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.5",
     "babel-minify-webpack-plugin": "^0.3.1",
     "babel-plugin-lodash": "^3.3.4",
     "clean-webpack-plugin": "^3.0.0",
-    "compression-webpack-plugin": "^3.0.0",
-    "concurrently": "^5.0.0",
-    "copy-webpack-plugin": "^5.0.5",
-    "css-loader": "^3.2.1",
+    "compression-webpack-plugin": "^3.0.1",
+    "concurrently": "^5.0.1",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.3.2",
     "eslint": "^6.7.2",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-loader": "^3.0.2",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "^5.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
-    "nodemon": "^2.0.1",
+    "nodemon": "^2.0.2",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^8.0.0",
     "webpack": "^4.41.2",
@@ -77,9 +77,10 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@oly_op/react-bem": "^1.0.9",
+    "@types/react": "^16.9.16",
     "apollo-boost": "^0.4.4",
-    "apollo-server": "^2.9.12",
-    "apollo-server-express": "^2.9.12",
+    "apollo-server": "^2.9.13",
+    "apollo-server-express": "^2.9.13",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
@@ -91,8 +92,8 @@
     "helmet": "^3.21.2",
     "http-errors": "^1.7.3",
     "lodash": "^4.17.15",
-    "mongodb": "^3.3.5",
-    "mongoose": "^5.7.13",
+    "mongodb": "^3.4.0",
+    "mongoose": "^5.8.1",
     "morgan": "^1.9.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
