--- a/package.json
+++ b/package.json
@@ -78,7 +78,10 @@
     "@apollo/react-hooks": "^3.1.3",
     "@oly_op/react-bem": "^1.0.9",
     "@types/react": "^16.9.17",
-    "apollo-boost": "^0.4.7",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link-error": "^1.1.12",
+    "apollo-link-http": "^1.5.16",
     "apollo-server": "^2.9.14",
     "apollo-server-express": "^2.9.14",
     "body-parser": "^1.19.0",
