--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "server": "clear && node src/server/index.js",
     "dev-server": "node_modules/.bin/nodemon src/server/index.js",
     "dev-client": "node_modules/.bin/webpack-dev-server --config webpack.config.cjs --env.mode development",
-    "development": "rm -r -f src/server/build && clear && concurrently \"npm run dev-client\" \"npm run dev-server\" && clear",
+    "dev": "rm -r -f src/server/build && clear && concurrently \"npm run dev-client\" \"npm run dev-server\" && clear",
     "sync": "git checkout . && git remote update && git pull",
     "push": "git status && git add -A && git commit -m \"Update\" && git push -u origin master"
   },
@@ -36,30 +36,33 @@
   "bugs": {
     "url": "https://github.com/olyop/boilerplate/issues"
   },
+  "optionalDependencies": {
+    "fsevents": "*"
+  },
   "homepage": "https://github.com/olyop/boilerplate#readme",
   "devDependencies": {
-    "@babel/core": "^7.7.7",
+    "@babel/core": "^7.8.6",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/polyfill": "^7.7.0",
-    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-env": "^7.8.6",
     "@babel/preset-react": "^7.7.4",
-    "babel-eslint": "^10.0.2",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.5",
     "babel-minify-webpack-plugin": "^0.3.1",
     "babel-plugin-lodash": "^3.3.4",
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^3.0.1",
-    "concurrently": "^5.0.2",
+    "concurrently": "^5.1.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-loader": "^3.0.3",
-    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "file-loader": "^5.0.2",
+    "file-loader": "^5.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "lodash-webpack-plugin": "^0.11.5",
@@ -68,47 +71,48 @@
     "nodemon": "^2.0.2",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^8.0.0",
-    "webpack": "^4.41.5",
+    "webpack": "^4.41.6",
     "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
     "write-file-webpack-plugin": "^4.5.1"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@oly_op/react-bem": "^1.0.9",
-    "@types/react": "^16.9.17",
+    "@types/react": "^16.9.23",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link-error": "^1.1.12",
     "apollo-link-http": "^1.5.16",
-    "apollo-server": "^2.9.15",
-    "apollo-server-express": "^2.9.15",
+    "apollo-server": "^2.10.1",
+    "apollo-server-express": "^2.10.1",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "formidable": "^1.2.1",
-    "graphql": "^14.5.4",
-    "graphql-tag": "^2.10.1",
-    "helmet": "^3.21.2",
+    "formidable": "^1.2.2",
+    "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
+    "helmet": "^3.21.3",
     "http-errors": "^1.7.3",
     "lodash": "^4.17.15",
-    "mongodb": "^3.4.1",
-    "mongoose": "^5.8.4",
+    "mongodb": "^3.5.4",
+    "mongoose": "^5.9.2",
     "morgan": "^1.9.1",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
+    "react": "^16.13.0",
     "react-apollo": "^3.1.3",
-    "react-datepicker": "^2.10.1",
-    "react-dom": "^16.12.0",
-    "react-redux": "^7.1.3",
+    "react-datepicker": "^2.13.0",
+    "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "react-router-scroll-4": "^1.0.0-beta.2",
     "react-spring": "^8.0.27",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "request": "^2.88.0",
+    "request": "^2.88.2",
     "resize-observer-polyfill": "^1.5.1",
     "response-time": "^2.3.2"
   }
