--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
   },
   "homepage": "https://github.com/olyop/boilerplate#readme",
   "devDependencies": {
-    "@babel/core": "^7.8.6",
+    "@babel/core": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/polyfill": "^7.7.0",
-    "@babel/preset-env": "^7.8.6",
+    "@babel/polyfill": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.7.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.5",
@@ -60,7 +60,7 @@
     "eslint-loader": "^3.0.3",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "file-loader": "^5.1.0",
     "html-loader": "^0.5.5",
@@ -71,8 +71,8 @@
     "nodemon": "^2.0.2",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^8.0.0",
-    "webpack": "^4.41.6",
-    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack": "^4.42.0",
+    "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
     "write-file-webpack-plugin": "^4.5.1"
@@ -85,8 +85,10 @@
     "apollo-client": "^2.6.8",
     "apollo-link-error": "^1.1.12",
     "apollo-link-http": "^1.5.16",
-    "apollo-server": "^2.10.1",
-    "apollo-server-express": "^2.10.1",
+    "apollo-server": "^2.11.0",
+    "apollo-server-express": "^2.11.0",
+    "apollo-upload-client": "^12.1.0",
+    "aws-sdk": "^2.636.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
@@ -94,17 +96,19 @@
     "express": "^4.17.1",
     "formidable": "^1.2.2",
     "graphql": "^14.6.0",
+    "graphql-fields": "^2.0.3",
     "graphql-tag": "^2.10.3",
+    "graphql-upload": "^10.0.0",
     "helmet": "^3.21.3",
     "http-errors": "^1.7.3",
     "lodash": "^4.17.15",
     "mongodb": "^3.5.4",
-    "mongoose": "^5.9.2",
+    "mongoose": "^5.9.4",
     "morgan": "^1.9.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-apollo": "^3.1.3",
-    "react-datepicker": "^2.13.0",
+    "react-datepicker": "^2.14.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
