--- a/package.json
+++ b/package.json
@@ -56,13 +56,13 @@
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.1",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-airbnb": "^18.1.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "file-loader": "^5.1.0",
+    "file-loader": "^6.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "lodash-webpack-plugin": "^0.11.5",
@@ -79,6 +79,8 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
     "@oly_op/react-bem": "^1.0.9",
     "@types/react": "^16.9.23",
     "apollo-cache-inmemory": "^1.6.5",
@@ -88,13 +90,14 @@
     "apollo-server": "^2.11.0",
     "apollo-server-express": "^2.11.0",
     "apollo-upload-client": "^12.1.0",
-    "aws-sdk": "^2.636.0",
+    "aws-sdk": "^2.640.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
-    "cookie-parser": "^1.4.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "formidable": "^1.2.2",
+    "fp-pipe-then": "^1.0.1",
     "graphql": "^14.6.0",
     "graphql-fields": "^2.0.3",
     "graphql-import": "^1.0.0-beta.2",
@@ -103,8 +106,8 @@
     "helmet": "^3.21.3",
     "http-errors": "^1.7.3",
     "lodash": "^4.17.15",
-    "mongodb": "^3.5.4",
-    "mongoose": "^5.9.4",
+    "mongodb": "^3.5.5",
+    "mongoose": "^5.9.5",
     "morgan": "^1.9.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
