--- a/package.json
+++ b/package.json
@@ -79,8 +79,6 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
-    "@material-ui/core": "^4.9.5",
-    "@material-ui/icons": "^4.9.1",
     "@oly_op/react-bem": "^1.0.9",
     "@types/react": "^16.9.23",
     "apollo-cache-inmemory": "^1.6.5",
@@ -90,7 +88,7 @@
     "apollo-server": "^2.11.0",
     "apollo-server-express": "^2.11.0",
     "apollo-upload-client": "^12.1.0",
-    "aws-sdk": "^2.640.0",
+    "aws-sdk": "^2.642.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
@@ -100,7 +98,7 @@
     "fp-pipe-then": "^1.0.1",
     "graphql": "^14.6.0",
     "graphql-fields": "^2.0.3",
-    "graphql-import": "^1.0.0-beta.2",
+    "graphql-import": "^1.0.0",
     "graphql-tag": "^2.10.3",
     "graphql-upload": "^10.0.0",
     "helmet": "^3.21.3",
@@ -112,11 +110,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-apollo": "^3.1.3",
-    "react-datepicker": "^2.14.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
-    "react-router-scroll-4": "^1.0.0-beta.2",
     "react-spring": "^8.0.27",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
