--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
   },
   "homepage": "https://github.com/olyop/boilerplate#readme",
   "devDependencies": {
-    "@babel/core": "^7.8.7",
+    "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/polyfill": "^7.8.7",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/preset-react": "^7.7.4",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-react": "^7.9.1",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "^8.1.0",
     "babel-minify-webpack-plugin": "^0.3.1",
     "babel-plugin-lodash": "^3.3.4",
     "clean-webpack-plugin": "^3.0.0",
@@ -79,8 +79,9 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@material-ui/core": "^4.9.7",
     "@oly_op/react-bem": "^1.0.9",
-    "@types/react": "^16.9.23",
+    "@types/react": "^16.9.25",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link-error": "^1.1.12",
@@ -88,7 +89,7 @@
     "apollo-server": "^2.11.0",
     "apollo-server-express": "^2.11.0",
     "apollo-upload-client": "^12.1.0",
-    "aws-sdk": "^2.642.0",
+    "aws-sdk": "^2.643.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
@@ -98,7 +99,7 @@
     "fp-pipe-then": "^1.0.1",
     "graphql": "^14.6.0",
     "graphql-fields": "^2.0.3",
-    "graphql-import": "^1.0.0",
+    "graphql-import": "^1.0.1",
     "graphql-tag": "^2.10.3",
     "graphql-upload": "^10.0.0",
     "helmet": "^3.21.3",
@@ -106,11 +107,11 @@
     "lodash": "^4.17.15",
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.5",
-    "morgan": "^1.9.1",
+    "morgan": "^1.10.0",
     "prop-types": "^15.7.2",
-    "react": "^16.13.0",
+    "react": "^16.13.1",
     "react-apollo": "^3.1.3",
-    "react-dom": "^16.13.0",
+    "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-spring": "^8.0.27",
