--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,6 @@
     "no-else-return": [0],
     "no-multiple-empty-lines": [2, { "max": 1, "maxEOF": 1, "maxBOF": 0 }],
     "no-underscore-dangle": [0],
-    "no-trailing-spaces": [0],
     "object-curly-newline": [0],  
     "arrow-parens": [0],
     "no-param-reassign": [0],
@@ -34,6 +33,9 @@
     "array-bracket-spacing": [0],
     "no-nested-ternary": [0],
     "array-callback-return": [0],
+    "no-irregular-whitespace": [2],
+    "no-multi-spaces": [2],
+    "no-trailing-spaces": [2],
     "react/jsx-boolean-value": [0],
     "react/jsx-filename-extension": [0],
     "react/no-children-prop": [0],
