--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,13 @@
 {
-  "extends": ["airbnb"],
+  "extends": [
+    "airbnb",
+    "plugin:css-modules/recommended"
+  ],
   "parser": "babel-eslint",
-  "plugins": ["react"],
+  "plugins": [
+    "react",
+    "css-modules"
+  ],
   "env": {
     "browser": true,
     "es6": true
@@ -36,7 +42,7 @@
     "no-irregular-whitespace": [2],
     "no-multi-spaces": [2],
     "no-trailing-spaces": [2],
-    "react/jsx-boolean-value": [0],
+    "react/jsx-boolean-value": [2],
     "react/jsx-filename-extension": [0],
     "react/no-children-prop": [0],
     "react/jsx-indent": [0],
