--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   "keywords": [
     "lodash",
     "react",
-    "redux",
     "webpack",
     "babel",
-    "nodejs",
     "express",
-    "mongodb"
+    "graphql",
+    "apollo",
+    "nodejs",
+    "mongodb",
+    "mongoose"
   ],
   "author": {
     "name": "Oliver Plummer",
@@ -66,7 +68,7 @@
     "eslint-plugin-react-hooks": "^2.5.1",
     "file-loader": "^6.0.0",
     "html-loader": "^1.0.0",
-    "html-webpack-plugin": "^4.0.1",
+    "html-webpack-plugin": "^4.0.4",
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.13.0",
@@ -83,7 +85,7 @@
     "@apollo/react-hooks": "^3.1.3",
     "@material-ui/core": "^4.9.7",
     "@oly_op/react-bem": "^1.0.9",
-    "@types/react": "^16.9.29",
+    "@types/react": "^16.9.31",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link-error": "^1.1.12",
@@ -91,7 +93,7 @@
     "apollo-server": "^2.11.0",
     "apollo-server-express": "^2.11.0",
     "apollo-upload-client": "^13.0.0",
-    "aws-sdk": "^2.649.0",
+    "aws-sdk": "^2.651.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
