--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.4",
+    "@material-ui/core": "^4.9.9",
     "@oly_op/react-bem": "^1.0.9",
     "@types/react": "^16.9.32",
     "apollo-cache-inmemory": "^1.6.5",
