--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-response-size": "0.0.3",
     "graphql": "^14.6.0",
     "graphql-fields": "^2.0.3",
     "graphql-import": "^1.0.1",
