--- a/package.json
+++ b/package.json
@@ -7,11 +7,9 @@
   "type": "module",
   "scripts": {
     "dependencies": "npm i",
-    "build": "rm -r -f src/server/build && clear && webpack --config webpack.config.cjs --env.mode production",
-    "server": "clear && node src/server/index.js",
-    "dev-server": "node_modules/.bin/nodemon src/server/index.js",
-    "dev-client": "node_modules/.bin/webpack-dev-server --config \"webpack.config.cjs\" --env.mode development",
-    "dev": "rm -d -r -f src/server/build && clear && concurrently \"npm run dev-client\" \"npm run dev-server\" && clear",
+    "server": "node_modules/.bin/nodemon src/server/index.js",
+    "client": "node_modules/.bin/webpack-dev-server --config \"client.webpack.config.cjs\" --env.mode development",
+    "dev": "rm -d -r -f src/server/build && clear && concurrently \"npm run client\" \"npm run server\" && clear",
     "sync": "git checkout . && git remote update && git pull",
     "push": "git status && git add -A && git commit -m \"Update\" && git push -u origin master"
   },
@@ -49,6 +47,8 @@
     "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
+    "@babel/preset-typescript": "^7.9.0",
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-minify-webpack-plugin": "^0.3.1",
@@ -60,6 +60,7 @@
     "css-loader": "^3.4.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-airbnb-typescript": "^7.2.0",
     "eslint-loader": "^3.0.4",
     "eslint-plugin-css-modules": "^2.11.0",
     "eslint-plugin-import": "^2.20.1",
@@ -75,6 +76,8 @@
     "nodemon": "^2.0.2",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^8.0.0",
+    "ts-loader": "^6.2.2",
+    "typescript": "^3.8.3",
     "webpack": "^4.42.1",
     "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.11",
