--- a/.eslintrc
+++ b/.eslintrc
@@ -7,8 +7,8 @@
     "react"
   ],
   "env": {
-    "browser": true,
-    "es6": true
+    "es6": true,
+    "browser": true
   },
   "rules": {
     "quotes": [2, "double"],
