--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dependencies": "npm i",
     "server": "node_modules/.bin/nodemon src/server/index.js",
-    "client": "node_modules/.bin/webpack-dev-server --config \"client.webpack.config.cjs\" --env.mode development",
+    "client": "node_modules/.bin/webpack-dev-server --config \"webpack.config.cjs\" --env.mode development",
     "dev": "rm -d -r -f src/server/build && clear && concurrently \"npm run client\" \"npm run server\" && clear",
     "sync": "git checkout . && git remote update && git pull",
     "push": "git status && git add -A && git commit -m \"Update\" && git push -u origin master"
@@ -121,6 +121,7 @@
     "react-router-dom": "^5.1.2",
     "react-spring": "^8.0.27",
     "resize-observer-polyfill": "^1.5.1",
-    "response-time": "^2.3.2"
+    "response-time": "^2.3.2",
+    "webpack-node-externals": "^1.7.2"
   }
 }
