--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dependencies": "npm i",
     "server": "node_modules/.bin/nodemon src/server/index.js",
-    "chrome": "start chrome http://192.168.1.102:3000/ --auto-open-devtools-for-tabs --ipc-connection-timeout-10",
+    "chrome": "start chrome http://192.168.1.102:3000/ --ipc-connection-timeout-10",
     "client": "node_modules/.bin/webpack-dev-server --config \"webpack.config.cjs\" --env.mode development",
     "dev": "rm -d -r -f src/server/build && clear && concurrently \"npm run chrome\" \"npm run client\" \"npm run server\" && clear",
     "sync": "git checkout . && git remote update && git pull",
@@ -92,6 +92,7 @@
     "apollo-server": "^2.11.0",
     "apollo-server-express": "^2.11.0",
     "apollo-upload-client": "^13.0.0",
+    "auth0-js": "^9.13.2",
     "aws-sdk": "^2.653.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
