--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "deprecated": false,
   "type": "module",
   "scripts": {
-    "dependencies": "npm i",
-    "build": "rm -r -f src/server/build && clear && webpack --config webpack.config.cjs --env.mode production",
-    "server": "clear && node src/server/index.js",
-    "dev-server": "node_modules/.bin/nodemon src/server/index.js",
-    "dev-client": "node_modules/.bin/webpack-dev-server --config \"webpack.config.cjs\" --env.mode development",
-    "dev": "rm -r -f src/server/build && clear && concurrently \"npm run dev-client\" \"npm run dev-server\" && clear",
+    "build": "npm run delete-build && clear && \"node_modules/.bin/webpack\" --config webpack.config.cjs --env.mode production",
+    "server": "clear && node --require dotenv/config src/server/index.js",
+    "dev-server": "node_modules/.bin/nodemon --require dotenv/config src/server/index.js",
+    "dev-client": "node_modules/.bin/webpack-dev-server --config webpack.config.cjs --env.mode development",
+    "delete-build": "rm -r -f src/server/build",
+    "dev": "npm run delete-build && clear && \"node_modules/.bin/concurrently\" \"npm run dev-client\" \"npm run dev-server\" && clear",
     "sync": "git checkout . && git remote update && git pull",
     "push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master && exit"
   },
@@ -29,7 +29,9 @@
     "apollo",
     "nodejs",
     "mongodb",
-    "mongoose"
+    "mongoose",
+    "sql",
+    "postgresql"
   ],
   "author": {
     "name": "Oliver Plummer",
@@ -47,75 +49,72 @@
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/polyfill": "^7.8.7",
-    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
+    "@types/webpack": "^4.41.11",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-minify-webpack-plugin": "^0.3.1",
     "babel-plugin-lodash": "^3.3.4",
-    "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^3.0.1",
     "concurrently": "^5.1.0",
     "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.4.1",
+    "css-loader": "^3.5.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
-    "eslint-loader": "^3.0.4",
+    "eslint-loader": "^4.0.0",
     "eslint-plugin-css-modules": "^2.11.0",
-    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-import-": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.1",
+    "eslint-plugin-react-hooks": "^3.0.0",
     "file-loader": "^6.0.0",
-    "html-loader": "^1.1.0",
-    "html-webpack-plugin": "^4.0.4",
+    "html-webpack-plugin": "^4.2.0",
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.0",
-    "nodemon": "^2.0.2",
+    "nodemon": "^2.0.3",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^8.0.0",
     "webpack": "^4.42.1",
-    "webpack-bundle-analyzer": "^3.6.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
     "write-file-webpack-plugin": "^4.5.1"
   },
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.4",
-    "@material-ui/core": "^4.9.9",
+    "@apollo/react-hooks": "^3.1.5",
+    "@material-ui/core": "^4.9.10",
     "@oly_op/react-bem": "^1.0.9",
-    "@types/react": "^16.9.32",
+    "@types/react": "^16.9.34",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
-    "apollo-link-error": "^1.1.12",
-    "apollo-link-http": "^1.5.16",
-    "apollo-server": "^2.11.0",
-    "apollo-server-express": "^2.11.0",
+    "apollo-link-error": "^1.1.13",
+    "apollo-link-http": "^1.5.17",
+    "apollo-server": "^2.12.0",
+    "apollo-server-express": "^2.12.0",
     "apollo-upload-client": "^13.0.0",
-    "auth0-js": "^9.13.2",
-    "aws-sdk": "^2.653.0",
+    "aws-sdk": "^2.656.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-response-size": "0.0.3",
     "graphql": "^14.6.0",
     "graphql-fields": "^2.0.3",
-    "graphql-import": "^1.0.1",
+    "graphql-import": "^1.0.2",
     "graphql-tag": "^2.10.3",
     "graphql-upload": "^10.0.0",
     "helmet": "^3.22.0",
     "lodash": "^4.17.15",
-    "mongodb": "^3.5.5",
-    "mongoose": "^5.9.7",
+    "mongodb": "^3.5.6",
+    "mongoose": "^5.9.9",
     "morgan": "^1.10.0",
     "mp3-duration": "^1.1.0",
     "pg": "^8.0.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
-    "react-apollo": "^3.1.4",
+    "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-spring": "^8.0.27",
