--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "react-router-dom": "^5.1.2",
     "react-spring": "^8.0.27",
     "response-time": "^2.3.2",
+    "sharp": "^0.25.2",
     "uuid": "^7.0.3",
     "yesql": "^4.1.1"
   }
