--- a/package.json
+++ b/package.json
@@ -41,9 +41,6 @@
   "bugs": {
     "url": "https://github.com/olyop/music-app/issues"
   },
-  "optionalDependencies": {
-    "fsevents": "*"
-  },
   "homepage": "https://github.com/olyop/music-app#readme",
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -64,7 +61,7 @@
     "eslint-config-airbnb": "^18.1.0",
     "eslint-loader": "^4.0.0",
     "eslint-plugin-css-modules": "^2.11.0",
-    "eslint-plugin-import-": "^2.20.1",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
@@ -92,15 +89,14 @@
     "apollo-server": "^2.12.0",
     "apollo-server-express": "^2.12.0",
     "apollo-upload-client": "^13.0.0",
-    "aws-sdk": "^2.656.0",
+    "aws-sdk": "^2.658.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-response-size": "0.0.3",
-    "graphql": "^14.6.0",
+    "graphql": "^15.0.0",
     "graphql-fields": "^2.0.3",
     "graphql-import": "^1.0.2",
     "graphql-tag": "^2.10.3",
@@ -121,6 +117,7 @@
     "response-time": "^2.3.2",
     "sharp": "^0.25.2",
     "uuid": "^7.0.3",
+    "uuid-validate": "0.0.3",
     "yesql": "^4.1.1"
   }
 }
