--- a/.eslintrc
+++ b/.eslintrc
@@ -12,46 +12,47 @@
     "browser": true
   },
   "rules": {
-    "quotes": [2, "double"],
-    "semi": [2, "never"],
-    "import/order": [0],
-    "dot-notation": [0],
-    "linebreak-style": [0],
-    "comma-dangle": [2, "always-multiline"],
+    "no-console": ["off"],
+    "quote-props": ["off"],
+    "import/order": ["off"],
+    "dot-notation": ["off"],
+    "arrow-parens": ["off"],
+    "padded-blocks": ["off"],
+    "no-else-return": ["off"],
+    "semi": ["error", "never"],
+    "linebreak-style": ["off"],
+    "no-return-assign": ["off"],
+    "arrow-body-style": ["off"],
+    "react/jsx-indent": ["off"],
+    "no-param-reassign": ["off"],
+    "no-nested-ternary": ["off"],
+    "no-multi-spaces": ["error"],
+    "quotes": ["error", "double"],
+    "jsx-a11y/label-has-for": [0],
+    "no-underscore-dangle": ["off"],
+    "prefer-destructuring": ["off"],
+    "no-trailing-spaces": ["error"],
+    "array-callback-return": ["off"],
+    "react/jsx-tag-spacing": ["off"],
+    "object-curly-newline": ["off"],  
+    "react/no-children-prop": ["off"],
+    "no-irregular-whitespace": ["error"],
+    "react/jsx-boolean-value": ["error"],
+    "react/jsx-wrap-multilines": ["off"],
     "max-len": ["error", { "code": 120 }],
-    "lines-between-class-members": [0],
-    "no-else-return": [0],
-    "no-multiple-empty-lines": [2, { "max": 1, "maxEOF": 1, "maxBOF": 0 }],
-    "no-underscore-dangle": [0],
-    "object-curly-newline": [0],  
-    "arrow-parens": [0],
-    "no-param-reassign": [0],
-    "no-console": [0],
-    "prefer-destructuring": [0],
-    "no-return-assign": [0],
-    "quote-props": [0],
-    "import/prefer-default-export": [0],
-    "operator-linebreak": [2, "after"],
-    "padded-blocks": [0],
-    "arrow-body-style": [0],
-    "array-bracket-spacing": [0],
-    "no-nested-ternary": [0],
-    "array-callback-return": [0],
-    "no-irregular-whitespace": [2],
-    "no-multi-spaces": [2],
-    "no-trailing-spaces": [2],
-    "react/jsx-boolean-value": [2],
-    "react/jsx-filename-extension": [0],
-    "react/no-children-prop": [0],
-    "react/jsx-indent": [0],
-    "react/jsx-fragments": [2, "element"],
-    "react/jsx-tag-spacing": [0],
-    "react/jsx-wrap-multilines": [0],
-    "react/jsx-closing-tag-location": [0],
-    "react/jsx-curly-brace-presence": [0],
-    "jsx-a11y/click-events-have-key-events": [0],
-    "jsx-a11y/label-has-associated-control": [0],
-    "jsx-a11y/control-has-associated-label": [0],
-    "jsx-a11y/label-has-for": [0]
+    "lines-between-class-members": ["off"],
+    "import/prefer-default-export": ["off"],
+    "react/jsx-filename-extension": ["off"],
+    "operator-linebreak": ["error", "after"],
+    "react/jsx-closing-tag-location": ["off"],
+    "react/jsx-curly-brace-presence": ["off"],
+    "object-curly-spacing": ["error", "always"],
+    "react/jsx-fragments": ["error", "element"],
+    "array-bracket-spacing": ["error", "always"],
+    "comma-dangle": ["error", "always-multiline"],
+    "jsx-a11y/click-events-have-key-events": ["off"],
+    "jsx-a11y/label-has-associated-control": ["off"],
+    "jsx-a11y/control-has-associated-label": ["off"],
+    "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 1, "maxBOF": 0 }]
   }
 }
