--- a/package.json
+++ b/package.json
@@ -6,31 +6,31 @@
   "deprecated": false,
   "type": "module",
   "scripts": {
-    "build": "npm run delete-build && clear && \"node_modules/.bin/webpack\" --config webpack.config.cjs --env.mode production",
+    "delete-build": "rm -r -f src/server/build",
+    "sync": "git checkout . && git remote update && git pull",
     "server": "clear && node --require dotenv/config src/server/index.js",
     "dev-server": "node_modules/.bin/nodemon --require dotenv/config src/server/index.js",
     "dev-client": "node_modules/.bin/webpack-dev-server --config webpack.config.cjs --env.mode development",
-    "delete-build": "rm -r -f src/server/build",
-    "dev": "npm run delete-build && clear && \"node_modules/.bin/concurrently\" \"npm run dev-client\" \"npm run dev-server\" && clear",
-    "sync": "git checkout . && git remote update && git pull",
-    "push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master && exit"
+    "push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master && exit",
+    "build": "npm run delete-build && clear && \"node_modules/.bin/webpack\" --config webpack.config.cjs --env.mode production",
+    "dev": "npm run delete-build && clear && \"node_modules/.bin/concurrently\" \"npm run dev-client\" \"npm run dev-server\" && clear"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/olyop/music-app.git"
   },
   "keywords": [
-    "lodash",
+    "sql",
     "react",
-    "webpack",
     "babel",
-    "express",
-    "graphql",
+    "lodash",
     "apollo",
     "nodejs",
+    "webpack",
+    "express",
+    "graphql",
     "mongodb",
     "mongoose",
-    "sql",
     "postgresql"
   ],
   "author": {
@@ -41,41 +41,42 @@
   "bugs": {
     "url": "https://github.com/olyop/music-app/issues"
   },
-  "homepage": "https://github.com/olyop/music-app#readme",
+  "homepage": "https://github.com/olyop/music-app/blob/master/README.md",
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "nodemon": "^2.0.3",
+    "webpack": "^4.42.1",
+    "css-loader": "^3.5.2",
     "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "file-loader": "^6.0.0",
+    "sass-loader": "^8.0.0",
+    "babel-loader": "^8.1.0",
+    "concurrently": "^5.1.0",
+    "webpack-cli": "^3.3.11",
+    "babel-eslint": "^10.1.0",
+    "eslint-loader": "^4.0.0",
     "@babel/polyfill": "^7.8.7",
+    "@types/webpack": "^4.41.11",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
-    "@types/webpack": "^4.41.11",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "babel-minify-webpack-plugin": "^0.3.1",
     "babel-plugin-lodash": "^3.3.4",
-    "compression-webpack-plugin": "^3.0.1",
-    "concurrently": "^5.1.0",
     "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.5.2",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-loader": "^4.0.0",
-    "eslint-plugin-css-modules": "^2.11.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^3.0.0",
-    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.2.0",
+    "webpack-dev-server": "^3.10.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "terser-webpack-plugin": "^2.3.5",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.9.0",
-    "nodemon": "^2.0.3",
+    "eslint-plugin-react-hooks": "^3.0.0",
+    "write-file-webpack-plugin": "^4.5.1",
+    "compression-webpack-plugin": "^3.0.1",
+    "eslint-plugin-css-modules": "^2.11.0",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "sass-loader": "^8.0.0",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
-    "write-file-webpack-plugin": "^4.5.1"
+    "@babel/plugin-proposal-class-properties": "^7.7.4"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
@@ -84,9 +85,7 @@
     "@types/react": "^16.9.34",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
-    "apollo-link-error": "^1.1.13",
     "apollo-link-http": "^1.5.17",
-    "apollo-server": "^2.12.0",
     "apollo-server-express": "^2.12.0",
     "apollo-upload-client": "^13.0.0",
     "aws-sdk": "^2.658.0",
@@ -114,6 +113,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-spring": "^8.0.27",
+    "recursive-readdir": "^2.2.2",
     "response-time": "^2.3.2",
     "sharp": "^0.25.2",
     "uuid": "^7.0.3",
