--- a/package.json
+++ b/package.json
@@ -43,40 +43,39 @@
   },
   "homepage": "https://github.com/olyop/music-app/blob/master/README.md",
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "nodemon": "^2.0.3",
-    "webpack": "^4.42.1",
-    "css-loader": "^3.5.2",
     "@babel/core": "^7.9.0",
-    "file-loader": "^6.0.0",
-    "sass-loader": "^8.0.0",
-    "babel-loader": "^8.1.0",
-    "concurrently": "^5.1.0",
-    "webpack-cli": "^3.3.11",
-    "babel-eslint": "^10.1.0",
-    "eslint-loader": "^4.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/polyfill": "^7.8.7",
-    "@types/webpack": "^4.41.11",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
+    "@types/webpack": "^4.41.11",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "babel-plugin-lodash": "^3.3.4",
+    "compression-webpack-plugin": "^3.0.1",
+    "concurrently": "^5.1.0",
     "copy-webpack-plugin": "^5.1.1",
-    "html-webpack-plugin": "^4.2.0",
-    "webpack-dev-server": "^3.10.3",
-    "eslint-plugin-react": "^7.19.0",
+    "css-loader": "^3.5.2",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
+    "eslint-loader": "^4.0.0",
+    "eslint-plugin-css-modules": "^2.11.0",
     "eslint-plugin-import": "^2.20.1",
-    "terser-webpack-plugin": "^2.3.5",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^3.0.0",
+    "html-webpack-plugin": "^4.2.0",
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.9.0",
-    "eslint-plugin-react-hooks": "^3.0.0",
-    "write-file-webpack-plugin": "^4.5.1",
-    "compression-webpack-plugin": "^3.0.1",
-    "eslint-plugin-css-modules": "^2.11.0",
-    "babel-minify-webpack-plugin": "^0.3.1",
+    "nodemon": "^2.0.3",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "@babel/plugin-proposal-class-properties": "^7.7.4"
+    "sass-loader": "^8.0.0",
+    "terser-webpack-plugin": "^2.3.5",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
+    "write-file-webpack-plugin": "^4.5.1"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
@@ -113,11 +112,9 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-spring": "^8.0.27",
-    "recursive-readdir": "^2.2.2",
     "response-time": "^2.3.2",
     "sharp": "^0.25.2",
     "uuid": "^7.0.3",
-    "uuid-validate": "0.0.3",
-    "yesql": "^4.1.1"
+    "uuid-validate": "0.0.3"
   }
 }
