--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,8 @@
   "files.autoSave": "onWindowChange",
   "editor.fontFamily": "Liberation Mono, Consolas, 'Courier New', monospace",
   "files.exclude": {
-    // ".vscode/": true,
-    // "node_modules/": true,
+    ".vscode/": true,
+    "node_modules/": true,
   },
   "editor.fontLigatures": true,
   "editor.fontWeight": "600",
