--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,8 +29,9 @@
   "terminal.integrated.rendererType": "dom",
   "editor.renderControlCharacters": false,
   "editor.suggestSelection": "first",
+  "breadcrumbs": false,
   "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-  "breadcrumbs.enabled": false,
+  "breadcrumbs.enabled": true,
   "typescript.format.enable": false,
   "terminal.integrated.fontSize": 16,
   "editor.renderWhitespace": "none",
