--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "sync": "git checkout . && git remote update && git pull",
     "server": "clear && node --require dotenv/config src/server/index.js",
     "dev-server": "node_modules/.bin/nodemon --require dotenv/config src/server/index.js",
-    "dev-client": "node_modules/.bin/webpack-dev-server --config webpack.config.cjs --env.mode development",
+    "dev-client": "node_modules/.bin/webpack-dev-server --config webpack.config.js --env.mode development",
     "push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master && exit",
-    "build": "npm run delete-build && clear && \"node_modules/.bin/webpack\" --config webpack.config.cjs --env.mode production",
+    "build": "npm run delete-build && clear && \"node_modules/.bin/webpack\" --config webpack.config.js --env.mode production",
     "dev": "npm run delete-build && clear && \"node_modules/.bin/concurrently\" \"npm run dev-client\" \"npm run dev-server\" && clear"
   },
   "repository": {
@@ -43,78 +43,79 @@
   },
   "homepage": "https://github.com/olyop/music-app/blob/master/README.md",
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "nodemon": "^2.0.3",
+    "webpack": "^4.43.0",
+    "css-loader": "^3.5.2",
     "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "sass-loader": "^8.0.0",
+    "babel-loader": "^8.1.0",
+    "concurrently": "^5.1.0",
+    "webpack-cli": "^3.3.11",
+    "babel-eslint": "^10.1.0",
     "@babel/polyfill": "^7.8.7",
+    "@types/webpack": "^4.41.12",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
-    "@types/webpack": "^4.41.11",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "babel-minify-webpack-plugin": "^0.3.1",
     "babel-plugin-lodash": "^3.3.4",
-    "compression-webpack-plugin": "^3.0.1",
-    "concurrently": "^5.1.0",
     "copy-webpack-plugin": "^5.1.1",
-    "css-loader": "^3.5.2",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-loader": "^4.0.0",
-    "eslint-plugin-css-modules": "^2.11.0",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^3.0.0",
     "html-webpack-plugin": "^4.2.0",
+    "webpack-dev-server": "^3.10.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-promise": "^4.2.1",
+    "terser-webpack-plugin": "^2.3.5",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.9.0",
-    "nodemon": "^2.0.3",
+    "eslint-plugin-react-hooks": "^3.0.0",
+    "write-file-webpack-plugin": "^4.5.1",
+    "compression-webpack-plugin": "^3.0.1",
+    "eslint-plugin-css-modules": "^2.11.0",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "sass-loader": "^8.0.0",
-    "terser-webpack-plugin": "^2.3.5",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
-    "write-file-webpack-plugin": "^4.5.1"
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.9.0"
   },
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.5",
-    "@material-ui/core": "^4.9.10",
-    "@oly_op/react-bem": "^1.0.9",
-    "@types/react": "^16.9.34",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.8",
-    "apollo-link-http": "^1.5.17",
-    "apollo-server-express": "^2.12.0",
-    "apollo-upload-client": "^13.0.0",
-    "aws-sdk": "^2.658.0",
-    "body-parser": "^1.19.0",
-    "compression": "^1.7.4",
-    "cookie-parser": "^1.4.5",
+    "pg": "^8.0.3",
     "cors": "^2.8.5",
+    "uuid": "^7.0.3",
     "dotenv": "^8.2.0",
+    "sharp": "^0.25.2",
+    "helmet": "^3.22.0",
+    "mongodb": "^3.5.6",
+    "morgan": "^1.10.0",
+    "react": "^16.13.1",
     "express": "^4.17.1",
     "graphql": "^15.0.0",
-    "graphql-fields": "^2.0.3",
-    "graphql-import": "^1.0.2",
-    "graphql-tag": "^2.10.3",
-    "graphql-upload": "^10.0.0",
-    "helmet": "^3.22.0",
     "lodash": "^4.17.15",
-    "mongodb": "^3.5.6",
-    "mongoose": "^5.9.9",
-    "morgan": "^1.10.0",
-    "mp3-duration": "^1.1.0",
-    "pg": "^8.0.2",
+    "aws-sdk": "^2.661.0",
+    "mongoose": "^5.9.10",
+    "compression": "^1.7.4",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2",
+    "body-parser": "^1.19.0",
+    "graphql-tag": "^2.10.3",
+    "mp3-duration": "^1.1.0",
+    "react-apollo": "^3.1.5",
+    "uuid-validate": "0.0.3",
+    "apollo-client": "^2.6.8",
+    "cookie-parser": "^1.4.5",
     "react-spring": "^8.0.27",
     "response-time": "^2.3.2",
-    "sharp": "^0.25.2",
-    "uuid": "^7.0.3",
-    "uuid-validate": "0.0.3"
+    "@types/react": "^16.9.34",
+    "graphql-fields": "^2.0.3",
+    "graphql-import": "^1.0.2",
+    "graphql-upload": "^10.0.0",
+    "react-router-dom": "^5.1.2",
+    "@oly_op/react-bem": "^1.0.9",
+    "apollo-link-http": "^1.5.17",
+    "@material-ui/core": "^4.9.11",
+    "@apollo/react-hooks": "^3.1.5",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-upload-client": "^13.0.0",
+    "apollo-server-express": "^2.12.0"
   }
 }
