--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
-    "@types/react": "^16.9.34",
     "@types/webpack": "^4.41.12",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
@@ -53,9 +52,9 @@
     "compression-webpack-plugin": "^3.0.1",
     "concurrently": "^5.2.0",
     "copy-webpack-plugin": "^5.1.1",
-    "dotenv-webpack": "^1.7.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-css-modules": "^2.11.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -71,27 +70,28 @@
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
     "write-file-webpack-plugin": "^4.5.1"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
-    "@material-ui/core": "^4.9.12",
+    "@material-ui/core": "^4.9.14",
     "@oly_op/react-bem": "^2.0.1",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.8",
+    "@types/react": "^16.9.35",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.9",
     "apollo-link-http": "^1.5.17",
-    "apollo-server-express": "^2.12.0",
+    "apollo-server-express": "^2.13.1",
     "apollo-upload-client": "^13.0.0",
-    "aws-sdk": "^2.671.0",
+    "aws-sdk": "^2.674.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "css-loader": "^3.5.3",
     "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.8.0",
     "express": "^4.17.1",
     "graphql": "^15.0.0",
     "graphql-fields": "^2.0.3",
@@ -104,14 +104,16 @@
     "lodash": "^4.17.15",
     "morgan": "^1.10.0",
     "mp3-duration": "^1.1.0",
-    "pg": "^8.0.3",
+    "music-metadata-browser": "^2.0.5",
+    "pg": "^8.1.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "sharp": "^0.25.2",
     "terser-webpack-plugin": "^3.0.1",
-    "uuid": "^8.0.0"
+    "uuid": "^8.0.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
