--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "sync": "git checkout . && git remote update && git pull",
     "server": "node -r dotenv/config",
     "delete-build": "rm -r -f src/server/build",
-    "build": "npm run delete-build && \"node_modules/.bin/webpack\" --config webpack.config.cjs",
-    "dev-server": "node_modules/.bin/nodemon -r dotenv/config",
-    "dev-client": "node_modules/.bin/webpack-dev-server --config webpack.config.cjs -r dotenv/config",
+    "dev-server": "node_modules/.bin/nodemon --trace-warnings -r dotenv/config",
     "push": "clear && git status && git add -A && git commit -m \"Update\" && git push -u origin master",
-    "dev": "npm run delete-build && clear && \"node_modules/.bin/concurrently\" \"npm run dev-client\" \"npm run dev-server\""
+    "dev-client": "node_modules/.bin/webpack-dev-server --env.NODE_ENV=local --config webpack.config.cjs -r dotenv/config",
+    "build": "clear && npm run delete-build && \"node_modules/.bin/webpack\" --env.NODE_ENV=local --config webpack.config.cjs",
+    "dev": "clear && npm run delete-build && clear && \"node_modules/.bin/concurrently\" \"npm run dev-client\" \"npm run dev-server\""
   },
   "repository": {
     "type": "git",
@@ -49,7 +49,7 @@
     "babel-minify-webpack-plugin": "^0.3.1",
     "babel-plugin-lodash": "^3.3.4",
     "concurrently": "^5.2.0",
-    "copy-webpack-plugin": "^5.1.1",
+    "copy-webpack-plugin": "^6.0.1",
     "eslint": "^7.0.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-loader": "^4.0.2",
@@ -69,6 +69,7 @@
     "stylelint-webpack-plugin": "^2.0.0",
     "terser-webpack-plugin": "^3.0.1",
     "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^3.7.0",
     "webpack-cli": "^3.3.11",
     "write-file-webpack-plugin": "^4.5.1"
   },
@@ -82,7 +83,6 @@
     "@types/webpack": "^4.41.13",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
-    "apollo-link-http": "^1.5.17",
     "apollo-server-express": "^2.13.1",
     "apollo-upload-client": "^13.0.0",
     "aws-sdk": "^2.677.0",
@@ -109,14 +109,15 @@
     "morgan": "^1.10.0",
     "mp3-duration": "^1.1.0",
     "music-metadata": "^6.4.0",
+    "node-fetch": "^2.6.0",
     "nodemon": "^2.0.4",
     "pg": "^8.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
-    "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "sharp": "^0.25.2",
+    "tiny-async-pool": "^1.1.0",
     "uuid": "^8.0.0",
     "webpack-dev-server": "^3.11.0"
   }
