--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,9 +43,10 @@
     "no-trailing-spaces": ["error"],
     "no-restricted-syntax": ["off"],
     "no-underscore-dangle": ["off"],
+    "object-curly-newline": ["off"], 
     "react/jsx-tag-spacing": ["off"],
     "array-bracket-spacing": ["off"],
-    "object-curly-newline": ["off"],  
+    "no-restricted-globals": ["off"],
     "react/no-children-prop": ["off"],
     "react/jsx-boolean-value": ["off"],
     "react/forbid-prop-types": ["off"],
@@ -66,6 +67,7 @@
     "jsx-a11y/click-events-have-key-events": ["off"],
     "jsx-a11y/label-has-associated-control": ["off"],
     "jsx-a11y/control-has-associated-label": ["off"],
+    "jsx-a11y/no-static-element-interactions": ["off"],
     "indent": ["error", 2, { "MemberExpression": "off" }],
     "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 1, "maxBOF": 0 }],
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true, "optionalDependencies": false }]
