--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.2.1",
-    "stylelint": "^13.3.3",
     "stylelint-config-sass-guidelines": "^7.0.0",
     "stylelint-scss": "^3.17.2",
     "stylelint-webpack-plugin": "^2.0.0",
@@ -71,6 +70,7 @@
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.7.0",
     "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
     "write-file-webpack-plugin": "^4.5.1"
   },
   "dependencies": {
@@ -85,7 +85,7 @@
     "apollo-client": "^2.6.10",
     "apollo-server-express": "^2.13.1",
     "apollo-upload-client": "^13.0.0",
-    "aws-sdk": "^2.677.0",
+    "aws-sdk": "^2.679.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "compression-webpack-plugin": "^4.0.0",
@@ -109,7 +109,6 @@
     "morgan": "^1.10.0",
     "mp3-duration": "^1.1.0",
     "music-metadata": "^6.4.0",
-    "node-fetch": "^2.6.0",
     "nodemon": "^2.0.4",
     "pg": "^8.2.0",
     "prop-types": "^15.7.2",
@@ -117,8 +116,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "sharp": "^0.25.2",
+    "stylelint": "^13.4.1",
     "tiny-async-pool": "^1.1.0",
-    "uuid": "^8.0.0",
-    "webpack-dev-server": "^3.11.0"
+    "uuid": "^8.0.0"
   }
 }
