--- a/package.json
+++ b/package.json
@@ -44,13 +44,16 @@
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-optional-chaining": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-minify-webpack-plugin": "^0.3.1",
     "babel-plugin-lodash": "^3.3.4",
     "concurrently": "^5.2.0",
     "copy-webpack-plugin": "^6.0.1",
-    "eslint": "^7.0.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-css-modules": "^2.11.0",
@@ -62,13 +65,14 @@
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^8.0.0",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^1.2.1",
     "stylelint-config-sass-guidelines": "^7.0.0",
     "stylelint-scss": "^3.17.2",
     "stylelint-webpack-plugin": "^2.0.0",
     "terser-webpack-plugin": "^3.0.1",
+    "typescript": "^3.9.3",
     "webpack": "^4.43.0",
-    "webpack-bundle-analyzer": "^3.7.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
     "write-file-webpack-plugin": "^4.5.1"
@@ -77,15 +81,14 @@
     "@apollo/react-hooks": "^3.1.5",
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
-    "@material-ui/core": "^4.9.14",
+    "@material-ui/core": "^4.10.0",
     "@oly_op/react-bem": "^2.0.1",
-    "@types/react": "^16.9.35",
     "@types/webpack": "^4.41.13",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-server-express": "^2.13.1",
     "apollo-upload-client": "^13.0.0",
-    "aws-sdk": "^2.679.0",
+    "aws-sdk": "^2.683.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "compression-webpack-plugin": "^4.0.0",
@@ -94,6 +97,7 @@
     "css-loader": "^3.5.3",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.8.0",
+    "eslint": "^7.1.0",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.2",
     "express": "^4.17.1",
@@ -102,7 +106,7 @@
     "graphql-import": "^1.0.2",
     "graphql-tag": "^2.10.3",
     "graphql-type-json": "^0.3.1",
-    "graphql-upload": "^10.0.0",
+    "graphql-upload": "^11.0.0",
     "helmet": "^3.22.0",
     "html-webpack-plugin": "^4.3.0",
     "lodash": "^4.17.15",
@@ -117,8 +121,9 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "sharp": "^0.25.2",
-    "stylelint": "^13.4.1",
+    "stylelint": "^13.5.0",
     "tiny-async-pool": "^1.1.0",
-    "uuid": "^8.0.0"
+    "uuid": "^8.1.0",
+    "webpack-bundle-analyzer": "^3.8.0"
   }
 }
