--- a/package.json
+++ b/package.json
@@ -41,25 +41,30 @@
   "bugs": "https://github.com/olyop/music-app/issues",
   "homepage": "https://github.com/olyop/music-app/blob/master/README.md",
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
-    "@babel/preset-react": "^7.9.4",
+    "@types/lodash": "^4.14.153",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
-    "awesome-typescript-loader": "^5.2.1",
+    "@types/webpack": "^4.41.13",
+    "@typescript-eslint/eslint-plugin": "^3.0.1",
+    "@typescript-eslint/parser": "^3.0.1",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "babel-minify-webpack-plugin": "^0.3.1",
-    "babel-plugin-lodash": "^3.3.4",
+    "compression-webpack-plugin": "^4.0.0",
     "concurrently": "^5.2.0",
     "copy-webpack-plugin": "^6.0.1",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-css-modules": "^2.11.0",
+    "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.8.0",
+    "eslint": "^7.1.0",
+    "eslint-config-airbnb-typescript": "^7.2.1",
+    "eslint-config-react": "^1.1.7",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-plugin-flowtype": "^5.1.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "html-webpack-plugin": "^4.3.0",
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
@@ -71,19 +76,18 @@
     "stylelint-scss": "^3.17.2",
     "stylelint-webpack-plugin": "^2.0.0",
     "terser-webpack-plugin": "^3.0.1",
+    "ts-loader": "^7.0.5",
     "typescript": "^3.9.3",
     "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
     "write-file-webpack-plugin": "^4.5.1"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
-    "@babel/core": "^7.9.6",
-    "@babel/preset-env": "^7.9.6",
     "@material-ui/core": "^4.10.0",
     "@oly_op/react-bem": "^2.0.1",
-    "@types/webpack": "^4.41.13",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-server-express": "^2.13.1",
@@ -91,15 +95,9 @@
     "aws-sdk": "^2.683.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
-    "compression-webpack-plugin": "^4.0.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "css-loader": "^3.5.3",
-    "dotenv": "^8.2.0",
-    "dotenv-webpack": "^1.8.0",
-    "eslint": "^7.1.0",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.2",
     "express": "^4.17.1",
     "graphql": "^15.0.0",
     "graphql-fields": "^2.0.3",
@@ -108,7 +106,6 @@
     "graphql-type-json": "^0.3.1",
     "graphql-upload": "^11.0.0",
     "helmet": "^3.22.0",
-    "html-webpack-plugin": "^4.3.0",
     "lodash": "^4.17.15",
     "morgan": "^1.10.0",
     "mp3-duration": "^1.1.0",
@@ -123,7 +120,6 @@
     "sharp": "^0.25.2",
     "stylelint": "^13.5.0",
     "tiny-async-pool": "^1.1.0",
-    "uuid": "^8.1.0",
-    "webpack-bundle-analyzer": "^3.8.0"
+    "uuid": "^8.1.0"
   }
 }
