--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,58 +1,71 @@
 {
-  "extends": ["react-app"],
+  "root": true,
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
+  "extends": [
+    "airbnb-typescript",
+    "airbnb/hooks",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
+    "plugin:promise/recommended",
+    "plugin:import/typescript"
+  ],
+  "plugins": [
+    "@typescript-eslint",
+    "promise",
+    "import"
+  ],
+  "ignorePatterns": [
+    "dist",
+    "node_modules",
+    "src/server/build"
+  ],
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
+  "env": {
+    "node": true,
+    "browser": true
+  },
+  "settings": {
+    "react": {
+      "pragma": "createElement"
+    }
+  },
   "rules": {
-    "no-tabs": ["off"],
-    "one-var": ["off"],
-    "no-console": ["off"],
-    "import/order": ["off"],
-    "dot-notation": ["off"],
-    "arrow-parens": ["off"],
-    "comma-spacing": ["off"],
-    "padded-blocks": ["off"],
-    "no-else-return": ["off"],
-    "semi": ["error", "never"],
-    "linebreak-style": ["off"],
-    "no-return-assign": ["off"],
-    "arrow-body-style": ["off"],
-    "react/jsx-indent": ["off"],
-    "import/extensions": ["off"],
-    "no-param-reassign": ["off"],
-    "no-nested-ternary": ["off"],
-    "no-multi-spaces": ["error"],
-    "quotes": ["error", "double"],
-    "jsx-a11y/label-has-for": [0],
-    "prefer-destructuring": ["off"],
-    "no-trailing-spaces": ["error"],
-    "no-restricted-syntax": ["off"],
-    "no-underscore-dangle": ["off"],
-    "object-curly-newline": ["off"], 
-    "react/jsx-tag-spacing": ["off"],
-    "array-bracket-spacing": ["off"],
-    "no-restricted-globals": ["off"],
-    "react/no-children-prop": ["off"],
-    "react/jsx-boolean-value": ["off"],
-    "react/forbid-prop-types": ["off"],
-    "implicit-arrow-linebreak": ["off"],
+    "no-tabs": "off",
+    "no-console": "off",
+    "no-else-return": "off",
+    "react/prop-types": "off",
+    "import/extensions": "off",
+    "no-nested-ternary": "off",
+    "eol-last": ["error", "never"],
+    "react/no-children-prop": "off",
+    "implicit-arrow-linebreak": "off",
+    "react/jsx-indent": ["error", "tab"],
     "react/jsx-wrap-multilines": ["off"],
+    "react/require-default-props": "off",
+    "lines-between-class-members": "off",
     "max-len": ["error", { "code": 120 }],
-    "react/require-default-props": ["off"],
-    "lines-between-class-members": ["off"],
-    "one-var-declaration-per-line": ["off"],
-    "import/prefer-default-export": ["off"],
+    "linebreak-style": ["error", "windows"],
     "react/jsx-filename-extension": ["off"],
+    "@typescript-eslint/camelcase": ["off"],
     "operator-linebreak": ["error", "after"],
     "react/jsx-closing-tag-location": ["off"],
     "react/jsx-curly-brace-presence": ["off"],
+    "react/jsx-indent-props": ["error", "tab"],
     "object-curly-spacing": ["error", "always"],
     "react/jsx-fragments": ["error", "element"],
+    "@typescript-eslint/semi": ["error", "never"],
     "comma-dangle": ["error", "always-multiline"],
+    "@typescript-eslint/quotes": ["error", "double"],
     "jsx-a11y/click-events-have-key-events": ["off"],
     "jsx-a11y/label-has-associated-control": ["off"],
     "jsx-a11y/control-has-associated-label": ["off"],
     "jsx-a11y/no-static-element-interactions": ["off"],
-    "indent": ["error", 2, { "MemberExpression": "off" }],
+    "react/jsx-tag-spacing": ["error", { "beforeSelfClosing": "never" }],
+    "array-bracket-spacing": ["error", "always", { "singleValue": false }],
+    "@typescript-eslint/indent": ["error", "tab", { "MemberExpression": "off" }],
     "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 1, "maxBOF": 0 }],
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true, "optionalDependencies": false }]
   }
