--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "nodejs",
     "sql",
     "postgresql",
-    "babel",
+    "typescript",
     "webpack",
     "eslint"
   ],
@@ -40,64 +40,19 @@
   "license": "MIT",
   "bugs": "https://github.com/olyop/music-app/issues",
   "homepage": "https://github.com/olyop/music-app/blob/master/README.md",
-  "devDependencies": {
-    "@types/lodash": "^4.14.153",
-    "@types/react": "^16.9.35",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/webpack": "^4.41.13",
-    "@typescript-eslint/eslint-plugin": "^3.0.1",
-    "@typescript-eslint/parser": "^3.0.1",
-    "babel-eslint": "^10.1.0",
-    "compression-webpack-plugin": "^4.0.0",
-    "concurrently": "^5.2.0",
-    "copy-webpack-plugin": "^6.0.1",
-    "dotenv": "^8.2.0",
-    "dotenv-webpack": "^1.8.0",
-    "eslint": "^7.1.0",
-    "eslint-config-airbnb-typescript": "^7.2.1",
-    "eslint-config-react": "^1.1.7",
-    "eslint-config-react-app": "^5.2.1",
-    "eslint-plugin-flowtype": "^5.1.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.4",
-    "html-webpack-plugin": "^4.3.0",
-    "lodash-webpack-plugin": "^0.11.5",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "sass-loader": "^8.0.0",
-    "source-map-loader": "^0.2.4",
-    "style-loader": "^1.2.1",
-    "stylelint-config-sass-guidelines": "^7.0.0",
-    "stylelint-scss": "^3.17.2",
-    "stylelint-webpack-plugin": "^2.0.0",
-    "terser-webpack-plugin": "^3.0.1",
-    "ts-loader": "^7.0.5",
-    "typescript": "^3.9.3",
-    "webpack": "^4.43.0",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0",
-    "write-file-webpack-plugin": "^4.5.1"
-  },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
     "@material-ui/core": "^4.10.0",
-    "@oly_op/react-bem": "^2.0.1",
+    "@oly_op/react-bem": "^2.1.7",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
-    "apollo-server-express": "^2.13.1",
+    "apollo-server-express": "^2.14.1",
     "apollo-upload-client": "^13.0.0",
-    "aws-sdk": "^2.683.0",
+    "aws-sdk": "^2.686.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "css-loader": "^3.5.3",
     "express": "^4.17.1",
     "graphql": "^15.0.0",
     "graphql-fields": "^2.0.3",
@@ -108,18 +63,63 @@
     "helmet": "^3.22.0",
     "lodash": "^4.17.15",
     "morgan": "^1.10.0",
-    "mp3-duration": "^1.1.0",
     "music-metadata": "^6.4.0",
     "node-fetch": "^2.6.0",
-    "nodemon": "^2.0.4",
     "pg": "^8.2.0",
-    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "sharp": "^0.25.2",
-    "stylelint": "^13.5.0",
     "tiny-async-pool": "^1.1.0",
     "uuid": "^8.1.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.6",
+    "@types/lodash": "^4.14.154",
+    "@types/node": "^14.0.6",
+    "@types/node-fetch": "^2.5.7",
+    "@types/pg": "^7.14.3",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/sharp": "^0.25.0",
+    "@types/webpack": "^4.41.16",
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.2",
+    "compression-webpack-plugin": "^4.0.0",
+    "concurrently": "^5.2.0",
+    "copy-webpack-plugin": "^6.0.1",
+    "css-loader": "^3.5.3",
+    "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.8.0",
+    "eslint": "^7.1.0",
+    "eslint-config-airbnb-typescript": "^7.2.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "html-webpack-plugin": "^4.3.0",
+    "lodash-webpack-plugin": "^0.11.5",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.1",
+    "nodemon": "^2.0.4",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "prop-types": "^15.7.2",
+    "sass-loader": "^8.0.0",
+    "source-map-loader": "^1.0.0",
+    "style-loader": "^1.2.1",
+    "stylelint": "^13.5.0",
+    "stylelint-config-sass-guidelines": "^7.0.0",
+    "stylelint-scss": "^3.17.2",
+    "stylelint-webpack-plugin": "^2.0.0",
+    "terser-webpack-plugin": "^3.0.2",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.3",
+    "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0",
+    "write-file-webpack-plugin": "^4.5.1"
   }
 }
