--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,21 @@
 {
   "compilerOptions": {
-    "outDir": "./dist/",
-    "sourceMap": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "module": "es6",
-    "target": "ES2020",
     "jsx": "react",
+    "strict": true,
+    "noEmit": true,
     "allowJs": true,
+    "sourceMap": true,
+    "module": "esnext",
+    "target": "esnext",
+    "noImplicitAny": true,
+    "noUnusedLocals": true,
+    "esModuleInterop": true,
+    "strictNullChecks": true,
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true
-  },
-  "include": [
-    "./src/"
-  ]
+    "noUnusedParameters": true,
+    "jsxFactory": "createElement",
+    "noFallthroughCasesInSwitch": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true
+  }
 }
