--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "uuid": "^8.1.0"
   },
   "devDependencies": {
+    "@types/apollo-upload-client": "^8.1.3",
     "@types/express": "^4.17.6",
     "@types/lodash": "^4.14.154",
     "@types/node": "^14.0.6",
